# french_voice_agent

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  GIT_SETUP.md  README.md  agent.py  delete_agent.py  delete_agent_force.py  delete_livekit_agent.py  deploy.sh  deploy_agent.expect  livekit.toml  requirements.txt  start.sh
agent/: voice_agent.py
agent/llm/: gpt_handler.py
agent/speech/: openai_tts.py  stt.py
agent/tools/: calendar.py  notifications.py
backend/: README.md  agent.py  pyproject.toml
config/: settings.py
frontend/: README.md  package-lock.json  package.json
frontend/components/: voice-call-interface.tsx
frontend/components/ui/: orb.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/token/: route.ts
frontend/src/components/: voice-call-interface.tsx
server/: main.py
