[project]
name = "french-voice-agent"
version = "1.0.0"
description = "French Voice Agent - Appointment Booking System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "livekit-agents>=1.3.5",
    "livekit-plugins-openai>=1.0.0",
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "google-auth>=2.43.0",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.1",
    "google-api-python-client>=2.187.0",
]
